Ensure all blocks have paragraph spacing in between
Besides the last

--- a/static/src/scss/_blocks.scss
+++ b/static/src/scss/_blocks.scss
@@ -1,11 +1,9 @@
 div.block-image {
-  margin: 0.5rem 0;
-
   figcaption {
     font-size: 85%;
   }
 }
 
-div.block-rich_text {
+.content > div:not(:last-child) {
   margin-bottom: $content-block-margin-bottom;
 }
